# notedeck

./: .envrc  .gitignore  .gitmodules  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  NIP-34-GIT-APP-PLAN.md  PLAN.md  README.md  SECURITY.md  Trunk.toml  android  build.rs  check  damus-4436db4623afccb2.js  damus.keystore  drop_order  entitlements.plist  example-android-config.json  index.html  preview  replit.md  shell.nix  todos.txt
crates/enostr/: Cargo.toml
crates/enostr/src/: error.rs  keypair.rs  lib.rs  negentropy.rs  note.rs  pns.rs  profile.rs  pubkey.rs  subid.rs
crates/enostr/tests/: network_resilience.rs  outbox_integration.rs  validate_kind1.rs
crates/headway_cli/: Cargo.toml
crates/headway_cli/src/: main.rs  relay.rs
crates/headway_cli/tests/: e2e.rs  fallback.rs
crates/nostrdb_relay/: Cargo.toml
crates/nostrdb_relay/src/: lib.rs
crates/nostrdb_relay/tests/: negentropy.rs  roundtrip.rs
crates/notebook_cli/: Cargo.toml
crates/notebook_cli/src/: main.rs
crates/notebook_cli/tests/: e2e.rs
crates/notedeck/: Cargo.toml  Clippy.toml  DEVELOPER.md  README.md
crates/notedeck/src/: abbrev.rs  accounts.rs  app.rs  args.rs  async_loader.rs  compact.rs  contacts.rs  context.rs  debouncer.rs  error.rs  filter.rs  fonts.rs  imgcache.rs  jni_cache.rs  job_pool.rs  jobs.rs  kind_renderer.rs  lib.rs  muted.rs  name.rs  nav.rs  ndb_ingest_filters.rs  nip05.rs  nip51_set.rs  note.rs  notecache.rs  notedeck.rs  oneshot_api.rs  options.rs  pool.rs  preview.rs  private_sync.rs  publish.rs  relay_debug.rs  relay_info.rs  relay_limits.rs  relayspec.rs  remote_api.rs  result.rs  route.rs  (+22 more)
crates/notedeck/tests/: update_install.rs
crates/notedeck_calendar/: Cargo.toml  README.md
crates/notedeck_calendar/.beads/: issues.jsonl
crates/notedeck_calendar/src/: app.rs  calendar.rs  comment.rs  event.rs  forms.rs  lib.rs  model.rs  parse.rs  rsvp.rs  subscription.rs  timezone.rs
crates/notedeck_chrome/: Cargo.toml  DEVELOPER.md  README.md
crates/notedeck_chrome/android/: build.gradle
crates/notedeck_chrome/src/: android.rs  app.rs  app_size.rs  chrome.rs  fonts.rs  lib.rs  notedeck.rs  notifications.rs  options.rs  persist_zoom.rs  preview.rs  setup.rs  theme.rs  timed_serializer.rs
crates/notedeck_chrome/tests/: ui_tests.rs
crates/notedeck_clndash/: Cargo.toml  README.md
crates/notedeck_clndash/src/: channels.rs  event.rs  invoice.rs  lib.rs  summary.rs  ui.rs  watch.rs
crates/notedeck_columns/: Cargo.toml  DEVELOPER.md  README.md  build.rs
crates/notedeck_columns/src/: abbrev.rs  actionbar.rs  app.rs  app_size_handler.rs  app_style.rs  args.rs  blur.rs  colors.rs  column.rs  contacts.rs  deck_state.rs  decks.rs  draft.rs  drag.rs  error.rs  filter.rs  frame_history.rs  gif.rs  images.rs  imgcache.rs  jobs.rs  key_parsing.rs  lib.rs  login_manager.rs  media_upload.rs  multi_subscriber.rs  muted.rs  nav.rs  nfilter.rs  note_renderer.rs  notecache.rs  notes_holder.rs  onboarding.rs  options.rs  post.rs  profile.rs  profile_state.rs  relay_pool_manager.rs  repost.rs  route.rs  (+13 more)
crates/notedeck_columns/tests/: columns_e2e.rs
crates/notedeck_dashboard/: Cargo.toml  README.md
crates/notedeck_dashboard/src/: chart.rs  lib.rs  sparkline.rs  ui.rs
crates/notedeck_dashboard/tests/: snapshot_tests.rs
crates/notedeck_dave/: Cargo.toml  README.md  shader.wgsl
crates/notedeck_dave/docs/: README.md  developer-guide.md  tools.md
crates/notedeck_dave/src/: agent_status.rs  auto_accept.rs  avatar.rs  collapse_state.rs  config.rs  dave.wgsl  events.rs  file_update.rs  focus_queue.rs  git_status.rs  ipc.rs  lib.rs  mesh.rs  messages.rs  notifications.rs  path_normalize.rs  path_utils.rs  quaternion.rs  session.rs  session_converter.rs  session_discovery.rs  session_events.rs  session_jsonl.rs  session_loader.rs  session_reconstructor.rs  tools.rs  update.rs  vec3.rs  worktree.rs
crates/notedeck_dave/tests/: claude_integration.rs  dave_button_tests.rs  markdown_table_tests.rs  model_picker_tests.rs  openai_integration.rs  pns_outbox_e2e.rs  text_overflow_tests.rs  tool_result_integration.rs
crates/notedeck_git/: Cargo.toml
crates/notedeck_git/src/: events.rs  lib.rs  subscriptions.rs
crates/notedeck_headway/: Cargo.toml  README.md
crates/notedeck_headway/src/: event.rs  lib.rs  model.rs  store.rs  ui.rs
crates/notedeck_headway/tests/: snapshot_tests.rs
crates/notedeck_horizon/: Cargo.toml  README.md
crates/notedeck_horizon/src/: block.rs  inspector.rs  lib.rs  sidebar.rs  theme.rs  timeline.rs
crates/notedeck_horizon/tests/: snapshot_tests.rs
crates/notedeck_livestreams/: Cargo.toml
crates/notedeck_livestreams/src/: lib.rs  player.rs
crates/notedeck_media_gst/: Cargo.toml
crates/notedeck_media_gst/src/: lib.rs
crates/notedeck_messages/: Cargo.toml
crates/notedeck_messages/src/: convo_renderable.rs  lib.rs  loader.rs  nav.rs  relay_ensure.rs  relay_prefetch.rs
crates/notedeck_messages/tests/: connection.rs  convergence.rs  double_ratchet_e2e.rs  giftwrap.rs  messages_e2e.rs  multi_account.rs  multi_conversation.rs  relay_delivery.rs  relay_list.rs  restart.rs
crates/notedeck_nostrverse/: Cargo.toml
crates/notedeck_nostrverse/src/: convert.rs  lib.rs  model_cache.rs  nostr_events.rs  presence.rs  room_state.rs  room_view.rs  subscriptions.rs  tilemap.rs
crates/notedeck_nostrverse/tests/: snapshot_tests.rs
crates/notedeck_notebook/: Cargo.toml  README.md  demo.canvas
crates/notedeck_notebook/src/: convert.rs  debug.rs  (+6 more)
crates/notedeck_publications/: Cargo.toml
crates/notedeck_reader/: Cargo.toml
crates/notedeck_release/: Cargo.toml  README.md
crates/notedeck_testing/: Cargo.toml  Dockerfile
crates/notedeck_ui/: Cargo.toml  README.md
crates/notedeck_wasm/: Cargo.toml  build.rs
crates/relay_sync/: Cargo.toml
crates/renderbud/: Cargo.toml  Makefile  README.md
egui-video-rs/: Cargo.toml  LICENSE  README.md
egui-video-rs/src/: android.rs  desktop.rs  lib.rs  stub.rs
enostr/: Cargo.toml
enostr/src/: error.rs  event.rs  filter.rs  keypair.rs  lib.rs  note.rs  profile.rs  pubkey.rs
(+3847 files in other folders)
