[package]
name = "enostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ewebsock = { version = "0.2.0", features = ["tls"] }
serde_derive = "1"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.89"
nostrdb = { workspace = true }
nostr = { version = "0.30.0" }
hex = "0.4.3"
tracing = "0.1.40"
env_logger = "0.11.1"
