[package]
name = "enostr"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-websocket"]
# ewebsock/tls only enables TLS for ewebsock's blocking tungstenite backend.
# The tokio backend connects via tokio-tungstenite, which needs its own TLS
# feature, otherwise wss:// fails with "TLS support not compiled in".
tokio-websocket = ["ewebsock/tokio", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
ewebsock = { version = "0.8.0", features = ["tls"] }
tokio-tungstenite = { workspace = true, optional = true }
serde_derive = { workspace = true }
serde = { workspace = true, features = ["derive"] } # You only need this if you want app persistence
serde_json = { workspace = true }
nostr = { workspace = true }
bech32 = { workspace = true }
nostrdb = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
mio = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokenator = { workspace = true }
hashbrown = { workspace = true }
slab = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
negentropy = { workspace = true }
uuid = { workspace = true }
profiling = { workspace = true }

[dev-dependencies]
nostr-database = "0.37"
nostr-relay-builder = "0.37"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.24"
futures-util = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = { workspace = true }
