[package]
name = "headway_cli"
edition = "2024"
version.workspace = true

[[bin]]
name = "headway"
path = "src/main.rs"

[dependencies]
headway = { workspace = true }
enostr = { workspace = true }
nostrdb = { workspace = true }
bech32 = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
nostrdb_relay = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tempfile = { workspace = true }
