[package]
name = "nostrdb_relay"
edition = "2024"
version.workspace = true

[dependencies]
nostrdb = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
negentropy = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
