[package]
name = "notebook_cli"
edition = "2024"
version.workspace = true

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
notedeck_notebook = { workspace = true }
relay_sync = { workspace = true }
enostr = { workspace = true }
nostrdb = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
nostrdb_relay = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tempfile = { workspace = true }
bech32 = { workspace = true }
