[package]
name = "notedeck_calendar"
edition = "2021"
version.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = "0.8"
egui = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
nostrdb = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
