[package]
name = "notedeck_calendar"
edition = "2021"
version.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = "0.8"
egui = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
nostrdb = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
nostr = { workspace = true }
iana-time-zone = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2.10.0", features = ["tls", "json"] }
urlencoding = { workspace = true }
