[package]
name = "notedeck_calendar"
version = { workspace = true }
edition = "2021"
description = "NIP-52 calendar event data models and parsing for Notedeck"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { workspace = true }
chrono-tz = "0.10"
egui = { workspace = true }
enostr = { workspace = true }
hex = { workspace = true }
notedeck = { workspace = true }
nostrdb = { workspace = true }
profiling = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
geohash = "0.13"
opener = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
